--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/core": "3.7.0",
     "@ionic-native/splash-screen": "3.7.0",
     "@ionic-native/status-bar": "3.7.0",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "angularfire2": "^4.0.0-rc0",
     "firebase": "^4.0.0",
     "ionic-angular": "3.2.1",
