--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "3.7.0",
     "@ionic-native/splash-screen": "3.7.0",
     "@ionic-native/status-bar": "3.7.0",
+    "@ionic/cloud-angular": "^0.12.0",
     "@ionic/storage": "^2.0.1",
     "angularfire2": "^4.0.0-rc0",
     "firebase": "^4.0.0",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
     "@ionic/cli-plugin-cordova": "1.4.1",
-    "@ionic/cli-plugin-ionic-angular": "1.1.2",
+    "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "typescript": "2.2.1"
   },
   "description": "An Ionic project"
