--- a/package.json
+++ b/package.json
@@ -29,9 +29,18 @@
         "firebase": "^4.0.0",
         "ionic-angular": "3.2.1",
         "ionicons": "3.0.0",
+        "promise-polyfill": "6.0.2",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.10"
+        "zone.js": "0.8.10",
+        "cordova-android": "~6.1.2",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.2",
+        "cordova-plugin-whitelist": "1.3.1",
+        "ionic-plugin-deploy": "~0.6.7",
+        "ionic-plugin-keyboard": "~2.2.1"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.7",
@@ -43,7 +52,16 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "ionic-plugin-deploy": {}
-        }
+            "ionic-plugin-deploy": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
     }
 }
